# itr-foreign-assets-helper

./: .gitignore  .tool-versions  LICENSE  Makefile  README.md  go.mod  go.sum  pyproject.toml
.github/workflows/: test.yml
cmd/: main.go
internal/etrade/: processor.go  processor_test.go
internal/forex/: sbi_rates.go  sbi_rates_test.go
internal/schedule/: assets_and_liabilities.go  assets_and_liabilities_test.go  capital_gains.go  capital_gains_test.go  exporter.go  exporter_test.go  foreign_assets.go  foreign_assets_test.go  rate.go
internal/stock/: types.go  types_test.go  yahoo.go  yahoo_test.go
itr_foreign_assets_helper/: etrade.py  forex.py  itr.py  itr_schedule_al.py  itr_schedule_cg.py  itr_schedule_fa.py  main.py  platform.py  stock.py  utils.py
test/e2e/: e2e_test.go
test/e2e/testdata/: expected.xlsx  gains.xlsx  holdings.xlsx
