[tool.poetry]
name = "itr-foreign-assets-helper"
version = "0.1.0"
description = ""
authors = ["Vishal Tak <vishaltak95@gmail.com>"]
maintainers = ["Vishal Tak <vishaltak95@gmail.com>"]
readme = "README.md"
packages = [{include = "itr_foreign_assets_helper"}]

[tool.poetry.dependencies]
python = "^3.11"
openpyxl = "^3.1.5"
yfinance = "^0.2.56"

[tool.poetry.scripts]
generate-itr-data = "itr_foreign_assets_helper.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
